--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -58,6 +58,11 @@
                                                           transform="rotate(-60, 250, 250)"/>
                                                     <rect x="245" y="10" width="10" height="45" fill=white
                                                           transform="rotate(-30, 250, 250)"/>
+                                                </rect>
+                                            </circle>
+                                        </rect>
+                                    </rect>
+                                </rect>
                             </svg>
                             <div id="Digital"></div>
                         </div>
