--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -5,6 +5,11 @@
         <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" bing-ref="plane" show-overlay="false"
                         config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
     </div>
+    <div id="altitudeArc" style="position: absolute; left: 0%; top: 0%; width: 100%; height: 100%;">
+        <svg id="altitudeArcSvg" viewBox="0 0 1200 1800">
+            <path id="altitudeArcPath" d="M 400 0 Q 600 -100 800 0" stroke="green" stroke-width="3" fill="none"></path>
+        </svg>
+    </div>
     <div id="ModeChangeMask"></div>
     <jet-mfd-nd-compass id="Compass"></jet-mfd-nd-compass>
     <jet-mfd-nd-info id="NDInfo">
