fixed analog clock

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -26,43 +26,37 @@
                                 <circle cx="250" cy="250" r="240" fill=#1E1B1C stroke="white" stroke-width="9"/>
 
                                 <rect id="Analog_Hour" x="242.5" y="152" width="15" height="101.35" rx="3.5" ry="3.5"
-                                      fill=white/>
-                                    <rect id="Analog_Minutes" x="242.5" y="50.6" width="15" height="202.71" rx="3.5"
-                                          ry="3.5" fill=white/>
-                                        <rect id="Analog_Seconds" x="248" y="50.6" width="4" height="202.71" rx="1.2"
-                                              ry="1.2"
-                                              fill=red/>
+                                      fill="white"/>
+                                <rect id="Analog_Minutes" x="242.5" y="50.6" width="15" height="202.71" rx="3.5"
+                                      ry="3.5" fill="white"/>
+                                <rect id="Analog_Seconds" x="248" y="50.6" width="4" height="202.71" rx="1.2" ry="1.2"
+                                      fill="red"/>
 
-                                            <circle cx="250" cy="250" r="16" fill=white/>
+                                <circle cx="250" cy="250" r="16" fill="white"/>
 
-                                                <rect x="245" y="10" width="10" height="45" fill=white/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(30, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(60, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(90, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(120, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(150, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(180, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(-150, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(-120, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(-90, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(-60, 250, 250)"/>
-                                                    <rect x="245" y="10" width="10" height="45" fill=white
-                                                          transform="rotate(-30, 250, 250)"/>
-                                                </rect>
-                                            </circle>
-                                        </rect>
-                                    </rect>
-                                </rect>
+                                <rect x="245" y="10" width="10" height="45" fill="white"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(30, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(60, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(90, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(120, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(150, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(180, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(-150, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(-120, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(-90, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(-60, 250, 250)"/>
+                                <rect x="245" y="10" width="10" height="45" fill="white"
+                                      transform="rotate(-30, 250, 250)"/>
                             </svg>
                             <div id="Digital"></div>
                         </div>
@@ -141,7 +135,8 @@
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/AltimeterIndicator.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/HSIndicator.js"></script>
-<script type="text/html" import-script="/HPages/VCockpit/Instruments/Airliners/Shared/PFD/AttitudeIndicator.js"></script>
+<script type="text/html"
+        import-script="/HPages/VCockpit/Instruments/Airliners/Shared/PFD/AttitudeIndicator.js"></script>
 <script type="text/html"
         import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/VerticalSpeedIndicator.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/PFD/ILSIndicator.js"></script>
