--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -1,6 +1,10 @@
 ﻿<link rel="stylesheet" href="./B787_10_ND.css"/>
 
 <script type="text/html" id="B787_10_ND_Template">
+    <svg id="FakeMapBox" viewBox="0 0 600 600" irs-state="off">
+        <text x="300" y="320">MAP</text>
+        <path d="M273 307L273 334L326 334L326 307L273 307"></path>
+    </svg>
     <div id="Map">
         <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" bing-ref="plane" show-overlay="false"
                         config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
@@ -93,6 +97,48 @@
             </svg>
         </div>
     </jet-mfd-nd-info>
+
+    <svg id="FakeCompassBox" viewBox="0 0 600 600" irs-state="off">
+        <text x="264" y="80" fill="green" font-size="22" font-family="Roboto-Bold" text-anchor="end"
+              alignment-baseline="central">HDG
+        </text>
+        <text x="300" y="80" fill="white" font-size="26" font-family="Roboto-Bold" text-anchor="middle"
+              alignment-baseline="central">---
+        </text>
+        <text x="336" y="80" fill="green" font-size="22" font-family="Roboto-Bold" text-anchor="start"
+              alignment-baseline="central">MAG
+        </text>
+        <path d="M 268.5 60 L 268.5 99 L 331 99 L 331 60" stroke-width="1" stroke="green" fill="none"></path>
+    </svg>
+
+    <svg id="FakeCompassBoxHdg" viewBox="0 0 600 600" irs-state="off">
+        <text x="300" y="80">HDG</text>
+        <path d="M273 65L273 95L326 95L326 65L273 65"></path>
+    </svg>
+
+    <svg id="align-times" irs-state="off">
+        <text id="GS_FakeText" class="Small" x="22" y="45" alignment-baseline="baseline" irs-state="off">GS</text>
+        <text id="GS_FakeValue" class="Value" x="50" y="45" alignment-baseline="baseline" irs-state="off">---</text>
+        <!-- --- -->
+        <text id="time-to-align" class="align" x="13" y="70" alignment-baseline="baseline" irs-state="off">TIME TO
+            ALIGN
+        </text>
+        <text id="l-align" class="align align-value" x="13" y="90" alignment-baseline="baseline" irs-state="off">05:53
+        </text>
+    </svg>
+
+    <svg id="align-times2" irs-state="off">
+        <text id="GS_FakeText2" class="Small" x="25" y="55" alignment-baseline="baseline" irs-state="off">GS</text>
+        <text id="GS_FakeValue2" class="Value" x="74" y="50" style="font-size: 40px;" alignment-baseline="baseline"
+              irs-state="off">---
+        </text> <!-- --- -->
+        <text id="time-to-align2" class="align" x="25" y="90" alignment-baseline="baseline" irs-state="off">TIME TO
+            ALIGN
+        </text>
+        <text id="l-align2" class="align align-value" x="25" y="125" alignment-baseline="baseline" irs-state="off">
+            05:53
+        </text>
+    </svg>
 
     <div id="NavPanel">
         <svg viewBox="0 0 1200 1800">
