added separator-label class to FMC separator

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -101,7 +101,7 @@
                     </div>
 
                     <div class="fms-screen-label-container">
-                        <div class="fms-screen-label col-0">---------------------------------------</div>
+                        <div class="fms-screen-label col-0 separator-label">---------------------------------------</div>
                         <div class="fms-screen-label col-1"></div>
                         <div class="fms-screen-label col-2"></div>
                         <div class="fms-screen-label col-3"></div>
@@ -226,6 +226,7 @@
 <!-- Heavy files -->
 <script type="text/html" import-script="/B78XH/Autopilot/B78XHNavModeSelector.js"></script>
 <script type="text/html" import-script="/B78XH/Directors/SpeedDirector.js"></script>
+<script type="text/html" import-script="/B78XH/DataHolders/FMC/FMCDataHolder.js"></script>
 <script type="text/html"
         import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
