ND elements irs-state attribute is not set dynamically anymore. The attribute is set only once when ND is created. This should increase ND performance.

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -5,7 +5,7 @@
         <text x="300" y="320">MAP</text>
         <path d="M273 307L273 334L326 334L326 307L273 307"></path>
     </svg>
-    <div id="Map">
+    <div id="Map" irs-state="off">
         <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" bing-ref="plane" show-overlay="false"
                         config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
     </div>
