--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -231,6 +231,7 @@
         import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyEventDispatcher.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/UpdateDelayer.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyInputChecks.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyInputUtils.js"></script>
