--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -31,6 +31,7 @@
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyDataStorage.js"></script>
 <script type="text/html" import-script="/Heavy/Utils/HeavyUtils.js"></script>
+<script type="text/html" import-script="/Heavy/Utils/HeavyEventDispatcher.js"></script>
 <!-- Heavy files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
