It is possible to use EFIS to control Minimums (switching between RADIO/BARO, Reset Minimums)

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -1215,29 +1215,37 @@ POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x
                             <rect width="169.781" height="270.834" rx="18" stroke="none"/>
                             <rect x="1" y="1" width="167.781" height="268.834" rx="17" fill="none"/>
                         </g>
+
                         <g id="Rectangle_161" data-name="Rectangle 161" transform="translate(27.42 200.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
                             <rect x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
                         <g id="Rectangle_162" data-name="Rectangle 162" transform="translate(29.858 388.796)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="124.141" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="120.141" height="49" fill="none"/>
+                            <rect id="RST_BUTTON" x="2" y="2" width="120.141" height="49" fill="none"/>
                         </g>
+
+                        <g id="RADIO_SWITCH">
+                            <path id="Path_171" data-name="Path 171" d="M2532.252,1540l-9.8,12.819,9.8,14.022,10.121-14.022Z" transform="translate(-2484.419 -1258.329)" fill="#727272" stroke="#9a9a9a" stroke-width="2"/>
+                            <path id="RADIO_SWITCH_BACKGROUND" data-name="Path 175" d="M2528.142,1540l-5.685,7.439,5.685,8.137,5.873-8.137Z" transform="translate(-2480.499 -1252.697)" fill="none"/>
+                            <text id="RADIO" transform="translate(78.26 305.264)" fill="#4ffe00" class="button-titles" font-weight="700"><tspan x="0" y="0">RADIO</tspan></text>
+                        </g>
+
+                        <g id="BARO_SWITCH">
+                            <path id="Path_170" data-name="Path 170" d="M2532.252,1540l-9.8,12.819,9.8,14.022,10.121-14.022Z" transform="translate(-2485.419 -1202.713)" fill="#727272" stroke="#9a9a9a" stroke-width="2"/>
+                            <path id="BARO_SWITCH_BACKGROUND" data-name="Path 174" d="M2528.142,1540l-5.685,7.439,5.685,8.137,5.873-8.137Z" transform="translate(-2481.499 -1197.081)" fill="none"/>
+                            <text id="BARO" transform="translate(78.224 359.166)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">BARO</tspan></text>
+                        </g>
+                        <text id="RST" data-name="RST" transform="translate(73.929 423.264)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">RST</tspan></text>
+                        <path id="RST_BUTTON_PATH" data-name="Path 169" d="M2155.718-24.3V28.9l4.841-4.136v-44.9l115.223.026,4.142-4.064Z" transform="translate(-2125.827 412.967)" fill="#9a9a9a"/>
                         <path id="Path_168" data-name="Path 168" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-2128.265 224.836)" fill="#9a9a9a"/>
-                        <path id="Path_169" data-name="Path 169" d="M2155.718-24.3V28.9l4.841-4.136v-44.9l115.223.026,4.142-4.064Z" transform="translate(-2125.827 412.967)" fill="#9a9a9a"/>
-                        <text id="_500" data-name="500" transform="translate(57.799 235.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">500</tspan></text>
-                        <text id="RST-2" data-name="RST" transform="translate(73.929 423.264)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">RST</tspan></text>
-                        <text id="RADIO" transform="translate(78.26 305.264)" fill="#4ffe00" class="button-titles" font-weight="700"><tspan x="0" y="0">RADIO</tspan></text>
-                        <text id="BARO" transform="translate(78.224 359.166)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">BARO</tspan></text>
+                        <text id="MINIMUM_REFERENCE_VALUE" data-name="500" transform="translate(57.799 235.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">---</tspan></text>
                         <text id="FT" transform="translate(137.168 234.134)" fill="#53ffff" class="button-titles-blue" font-weight="700"><tspan x="0" y="0">FT</tspan></text>
                         <rect id="Rectangle_163" data-name="Rectangle 163" width="54.211" height="17" transform="translate(63.26 175.166)"/>
                         <text id="MINS" transform="translate(67.929 190.666)" class="box-titles" font-weight="500"><tspan x="0" y="0">MINS</tspan></text>
-                        <path id="Path_170" data-name="Path 170" d="M2532.252,1540l-9.8,12.819,9.8,14.022,10.121-14.022Z" transform="translate(-2485.419 -1202.713)" fill="#727272" stroke="#9a9a9a" stroke-width="2"/>
-                        <path id="Path_171" data-name="Path 171" d="M2532.252,1540l-9.8,12.819,9.8,14.022,10.121-14.022Z" transform="translate(-2484.419 -1258.329)" fill="#727272" stroke="#9a9a9a" stroke-width="2"/>
                         <path id="Path_172" data-name="Path 172" d="M2534.817,1569.252v-3.491l8.861-12.235-8.825-11.193v-3.3l11.381,14.4Z" transform="translate(-2488.01 -1203.372)" fill="#323232"/>
                         <path id="Path_173" data-name="Path 173" d="M2534.817,1569.252v-3.491l8.861-12.235-8.825-11.193v-3.3l11.381,14.4Z" transform="translate(-2487.01 -1258.988)" fill="#323232"/>
-                        <path id="Path_174" data-name="Path 174" d="M2528.142,1540l-5.685,7.439,5.685,8.137,5.873-8.137Z" transform="translate(-2481.499 -1197.081)" fill="#155700"/>
-                        <path id="Path_175" data-name="Path 175" d="M2528.142,1540l-5.685,7.439,5.685,8.137,5.873-8.137Z" transform="translate(-2480.499 -1252.697)" fill="#155700"/>
+
                         <path id="Path_176" data-name="Path 176" d="M3107.8,2258.573v9.385h57.543" transform="translate(-2718.562 -2147.708)" fill="none" stroke="#ededed" stroke-width="3"/>
                         <g id="Rectangle_164" data-name="Rectangle 164" transform="translate(149 899)" stroke="#fff" stroke-width="4">
                             <rect width="338" height="42" stroke="none"/>
