It is possible to enable wxr, tfc and terr by EFIS

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -1125,22 +1125,24 @@ POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x
                         <path id="Path_145" data-name="Path 145" d="M2921.993,2791.752l-32.087,81.69" transform="translate(-2396 -2147)" fill="none" stroke="#ececec" stroke-width="3"/>
                         <g id="Rectangle_145" data-name="Rectangle 145" transform="translate(163.462 466.535)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="WXR_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
+
                         <g id="Rectangle_146" data-name="Rectangle 146" transform="translate(267.462 466.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="TFC_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
+
                         <g id="Rectangle_147" data-name="Rectangle 147" transform="translate(371.462 466.375)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="TERR_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
-                        <path id="Path_147" data-name="Path 147" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1992.222 490.705)" fill="#9a9a9a"/>
-                        <path id="Path_148" data-name="Path 148" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1888.222 490.836)" fill="#9a9a9a"/>
-                        <path id="Path_149" data-name="Path 149" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1784.222 490.545)" fill="#9a9a9a"/>
                         <text id="WXR" transform="translate(196.267 501.003)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">WXR</tspan></text>
+                        <path id="WXR_BUTTON_PATH" data-name="Path 147" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1992.222 490.705)" fill="#9a9a9a"/>
                         <text id="TFC" transform="translate(300.267 501.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">TFC</tspan></text>
+                        <path id="TFC_BUTTON_PATH" data-name="Path 148" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1888.222 490.836)" fill="#9a9a9a"/>
                         <text id="TERR" transform="translate(398.281 501.003)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">TERR</tspan></text>
+                        <path id="TERR_BUTTON_PATH" data-name="Path 149" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1784.222 490.545)" fill="#9a9a9a"/>
                         <g id="Rectangle_148" data-name="Rectangle 148" transform="translate(267.462 393.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
                             <rect x="2" y="2" width="97.608" height="49" fill="none"/>
